Some visual improvements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <p>Here you can find some very good squirrels.</p>
+        <p>Here you can find some very good pictures of squirrels.</p>
         <div class="imageCarousel">
             <img src="img/Squirrel1.jpg" alt="A picture of a nice squirrel." class="imageItem" data-index="0">
             <img src="img/Squirrel2.jpg" alt="A picture of a nice squirrel." class="imageItem" data-index="1">
